[package]
name = "pizza-analysis-turkish"
version = "0.1.0"
authors = ["INFINI Labs <hello@infini.ltd>"]
edition = "2021"
license = "MIT"
description = "Turkish language analysis for INFINI Pizza"
repository = "https://pizza.rs"
keywords = ["pizza", "turkish", "lowercase", "nlp"]

[features]
default = []
std = ["pizza-engine/std"]

[dependencies]
pizza-engine = { path = "../../lib/engine", default-features = false }
hashbrown = { version = "0.14", default-features = false }
once_cell = { version = "1", default-features = false, features = ["alloc"] }

[workspace]

[dev-dependencies]
